# ai-mart-platform

./: .gitignore  compose.yaml
product_service/: pyproject.toml
todo/app/: main.py
user_service/: pyproject.toml
user_service/user_service/: main.py
