[tool.poetry]
name = "product-service"
version = "0.1.0"
description = ""
authors = ["ghulamshabbir1234567@gmail.com <71768939+GhulamShabbir@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
